[package]
name = "oxidebpf"
version = "0.1.0"
license = "BSD-3-Clause"
authors = [
    "Carl Petty <carl.petty@redcanary.com>",
    "Brandon Jackson <brandon.jackson@redcanary.com>",
    "Rafael Ortiz <rafael.ortiz@redcanary.com>",
    "Dave Bogle <dave.bogle@redcanary.com>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.105"
goblin = "0.4.3"
nix = "0.22.2"
itertools = "0.10.1"
crossbeam-channel = "0.5.1"
lazy_static = "1.4.0"
uuid = { version = "0.8.2", features = ["v4"] }
mio = { version = "0.7.14", features = ["os-poll", "os-ext"] }
retry = "1.3.0"
proc-mounts = "0.2.4"
slog = "2.7.0"
slog-stdlog = "4.1.0"
slog-term = "2.8.0"
slog-atomic = "3.1.0"
thread-priority = "0.3.0"

[dev-dependencies]
oxidebpf = { path = ".", features = ["log_buf"] }
memmap = "0.7.0"
scopeguard = "1.1.0"
ctrlc = "3.1"

[features]
log_buf = []
