[package]
name = "oxidebpf"
description = "A pure-Rust library for managing eBPF programs."
homepage = "https://github.com/redcanaryco/oxidebpf"
repository = "https://github.com/redcanaryco/oxidebpf"
readme = "README.md"
version = "0.2.2"
license = "BSD-3-Clause"
keywords = ["eBPF", "BPF", "linux"]
categories = ["config", "data-structures", "os::linux-apis", "parsing"]
authors = [
    "Carl Petty <carl.petty@redcanary.com>",
    "Brandon Jackson <brandon.jackson@redcanary.com>",
    "Rafael Ortiz <rafael.ortiz@redcanary.com>",
    "Dave Bogle <dave.bogle@redcanary.com>",
    "Andrés Medina <andres.medina@redcanary.com>",
    "Vince Bundage <vince.bundage@redcanary.com>"
]
edition = "2021"

[dependencies]
libc = "0.2.105"
goblin = "0.4.3"
nix = "0.23.1"
itertools = "0.10.1"
crossbeam-channel = "0.5.1"
lazy_static = "1.4.0"
uuid = { version = "0.8.2", features = ["v4"] }
mio = { version = "0.8", features = ["os-poll", "os-ext"] }
retry = "1.3.0"
proc-mounts = "0.2.4"
slog = "2.7.0"
slog-atomic = "3.1.0"
thread-priority = "0.7.0"
metrics = { version = "0.18.0", optional = true }

[dev-dependencies]
memmap = "0.7.0"
scopeguard = "1.1.0"
ctrlc = "3.1"

[features]
log_buf = []
rootless_blueprints = []
